objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountId_com__c</fullName>
        <description>AccountID.com field used for SalesLoft Account Management</description>
        <formula>CASESAFEID(Id)+'.com'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Create_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Create Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agency_or_Non_Agency__c</fullName>
        <label>Agency or Non-Agency?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Agency</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternative_Name__c</fullName>
        <label>Alternative Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avg_Mortgage_Amount__c</fullName>
        <label>Avg Mortgage Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Lender_Type__c</fullName>
        <label>BD Lender Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregator</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Banking Co-Op</fullName>
                </value>
                <value>
                    <fullName>BOC Corr</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Conduit</fullName>
                </value>
                <value>
                    <fullName>Corr</fullName>
                </value>
                <value>
                    <fullName>Corr/TPO Prospect</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>Guild Corr</fullName>
                </value>
                <value>
                    <fullName>Guild Correspondent</fullName>
                </value>
                <value>
                    <fullName>Jumbo Portfolio</fullName>
                </value>
                <value>
                    <fullName>Jumbo Portfolio - Agency</fullName>
                </value>
                <value>
                    <fullName>Mortgage Bank</fullName>
                </value>
                <value>
                    <fullName>Mortgage Bank/Corr Lender</fullName>
                </value>
                <value>
                    <fullName>Mortgage License</fullName>
                </value>
                <value>
                    <fullName>Online Lender (Personal and Home Equity)</fullName>
                </value>
                <value>
                    <fullName>Portfolio Lender/Retail</fullName>
                </value>
                <value>
                    <fullName>Realtor/Mortgage Aggregator</fullName>
                </value>
                <value>
                    <fullName>Realtor/Mortgage Bank</fullName>
                </value>
                <value>
                    <fullName>Realtor/Mortgage License</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Retail/ Investor</fullName>
                </value>
                <value>
                    <fullName>Retail/Wholesale</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage Network</fullName>
                </value>
                <value>
                    <fullName>Servicer/Asset Management</fullName>
                </value>
                <value>
                    <fullName>Wholesale Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Loan_Investor_type__c</fullName>
        <label>BD Loan Investor type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Thrift</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>CDFI</fullName>
                </value>
                <value>
                    <fullName>CUSO</fullName>
                </value>
                <value>
                    <fullName>Whole Loan Buyer</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>mREIT</fullName>
                </value>
                <value>
                    <fullName>Pension Fund</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_sheet_Capacity_Correspondent__c</fullName>
        <label>Balance sheet Capacity - Correspondent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$50MM</fullName>
                </value>
                <value>
                    <fullName>$50 to $100 MM</fullName>
                </value>
                <value>
                    <fullName>$100 to $200 MM</fullName>
                </value>
                <value>
                    <fullName>&gt; $200 MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_sheet_Capacity_Retail__c</fullName>
        <label>Balance sheet Capacity - Retail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$50MM</fullName>
                </value>
                <value>
                    <fullName>$50 to $100 MM</fullName>
                </value>
                <value>
                    <fullName>$100 to $200 MM</fullName>
                </value>
                <value>
                    <fullName>&gt; $200 MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_sheet_Capacity_Wholesale__c</fullName>
        <label>Balance sheet Capacity - Wholesale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$50MM</fullName>
                </value>
                <value>
                    <fullName>$50 to $100 MM</fullName>
                </value>
                <value>
                    <fullName>$100 to $200 MM</fullName>
                </value>
                <value>
                    <fullName>&gt; $200 MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_CRM_ID__c</fullName>
        <externalId>true</externalId>
        <label>Base CRM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_CRM_Owner__c</fullName>
        <label>Base CRM Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bauer_Rating__c</fullName>
        <label>Bauer Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 star</fullName>
                </value>
                <value>
                    <fullName>2 stars</fullName>
                </value>
                <value>
                    <fullName>3 stars</fullName>
                </value>
                <value>
                    <fullName>4 stars</fullName>
                </value>
                <value>
                    <fullName>5 stars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>HQ Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Mode__c</fullName>
        <label>Buyer Mode</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Trouble</fullName>
                </value>
                <value>
                    <fullName>Even Keel</fullName>
                </value>
                <value>
                    <fullName>Over confident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_Red_Flags__c</fullName>
        <label>Buyer Red Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Information about which you are uncertain</fullName>
                </value>
                <value>
                    <fullName>Any Buying Influence that has not been contacted</fullName>
                </value>
                <value>
                    <fullName>Any Buying Influence new to their job</fullName>
                </value>
                <value>
                    <fullName>A reorganization or realignment of responsibilities within an organization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Strengths__c</fullName>
        <label>Buying Strengths</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unique product</fullName>
                </value>
                <value>
                    <fullName>access lost customers</fullName>
                </value>
                <value>
                    <fullName>attract more customers</fullName>
                </value>
                <value>
                    <fullName>open a new sales partner</fullName>
                </value>
                <value>
                    <fullName>solve an affordability solution</fullName>
                </value>
                <value>
                    <fullName>provide an alternative CRA solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canary_Rating__c</fullName>
        <description>S&amp;P Global Market Intelligence field</description>
        <label>Canary Rating</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conforming2__c</fullName>
        <formula>Parent.Conforming__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conforming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conforming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conforming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacts</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Date_Time__c</fullName>
        <description>Marketo Field for inclusion passed from lead</description>
        <inlineHelpText>Marketo Field for inclusion</inlineHelpText>
        <label>Converted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Copy_of_Channel_Hierarchy_Requirements__c</fullName>
        <label>Copy of Channel Hierarchy Requirements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Corporate_Office__c</fullName>
        <label>Corporate Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Phone__c</fullName>
        <label>Corporate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Count_of_Deals2__c</fullName>
        <inlineHelpText>Sum of all opportunities within parent account that have stage = Funded Won</inlineHelpText>
        <label>Count of Deals (Opportunities)</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Funded Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Deals_Account_Opportunities__c</fullName>
        <label>Count of Deals (Account Opportunities)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Deals_Branch_Opportunities__c</fullName>
        <label>Count of Deals (Branch Opportunities)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_LOP_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create LOP Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DLRS_Test__c</fullName>
        <label>DLRS Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deactivate_LOP_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate LOP Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detailed_Topics__c</fullName>
        <label>Detailed Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affluent Lifestyle</fullName>
                </value>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Aging</fullName>
                </value>
                <value>
                    <fullName>AM Drive-Time</fullName>
                </value>
                <value>
                    <fullName>Amusement Parks &amp; Zoos</fullName>
                </value>
                <value>
                    <fullName>Architecture &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Beauty &amp; Grooming</fullName>
                </value>
                <value>
                    <fullName>Beer</fullName>
                </value>
                <value>
                    <fullName>Boating &amp; Yachting</fullName>
                </value>
                <value>
                    <fullName>Book Reviews</fullName>
                </value>
                <value>
                    <fullName>Breaking News</fullName>
                </value>
                <value>
                    <fullName>Brewing</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Calendar &amp; Events</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Careers</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>CEOs &amp; Business Leaders</fullName>
                </value>
                <value>
                    <fullName>Chambers of Commerce</fullName>
                </value>
                <value>
                    <fullName>Charitable Foundations</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Circulation</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Civil Rights</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Lender Email - used in HB Agreement Closing Instructions</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contacts__c</fullName>
        <label>Emergency Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finder_Promotional_Pricing_Deadline__c</fullName>
        <formula>Finders_Agreement_Date__c + 44</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finder Promotional Pricing Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finders_Agreement_Date__c</fullName>
        <inlineHelpText>Date signed Unison Finders Fee Agreement</inlineHelpText>
        <label>Finders Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstREX_Product__c</fullName>
        <label>FirstREX Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REXAgreement</fullName>
                </value>
                <value>
                    <fullName>HomeBuyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Time_Home_Buyer__c</fullName>
        <label>First Time Home Buyer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Footprint__c</fullName>
        <label>Geo Footprint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List all US States</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>All Unison States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-5 = Atagonist</fullName>
                </value>
                <value>
                    <fullName>-4= Very negative</fullName>
                </value>
                <value>
                    <fullName>-3=Negative</fullName>
                </value>
                <value>
                    <fullName>-2=Uninterested</fullName>
                </value>
                <value>
                    <fullName>-1=probably won't resist</fullName>
                </value>
                <value>
                    <fullName>=1=Willing to go along</fullName>
                </value>
                <value>
                    <fullName>+2=Interested</fullName>
                </value>
                <value>
                    <fullName>+3=Supportive</fullName>
                </value>
                <value>
                    <fullName>+4=strongly Supportive</fullName>
                </value>
                <value>
                    <fullName>+5= Enthusiastic / Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HMDA_Application_Conventional_Currency__c</fullName>
        <label>HMDA Application Conventional $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HMDA_Application_Conventional__c</fullName>
        <label>HMDA Application Conventional #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HMDA_Funded_Conventional_Currency__c</fullName>
        <label>HMDA Funded Conventional $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HMDA_Funded_Conventional__c</fullName>
        <label>HMDA Funded Conventional #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Household_Annual_Income__c</fullName>
        <label>Household Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Salesforce_ID_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Salesforce ID sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jumbo2__c</fullName>
        <formula>Parent.Jumbo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jumbo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOPProcessingError__c</fullName>
        <label>LOP Processing Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOP_Error_Message__c</fullName>
        <label>LOP Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOP_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOP Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LO_Total__c</fullName>
        <label>LO Total</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Opportunity_Id__c</fullName>
        <inlineHelpText>Most recently created opportunity id within this account.</inlineHelpText>
        <label>Latest Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Case_Safe_Id__c</fullName>
        <inlineHelpText>Case safe ID of lead that created Account</inlineHelpText>
        <label>Lead Case Safe Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <label>Lead Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Submission_Source__c</fullName>
        <label>Lead Submission Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Officer Portal</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Sales_Director_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Sales Director Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lender_Branch_ID__c</fullName>
        <label>Lender Branch ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_ID__c</fullName>
        <label>License ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Investors_they_work_with__c</fullName>
        <label>Loan Investors they work with</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <label>Loan Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>FA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Non Agency</fullName>
                </value>
                <value>
                    <fullName>NonQM</fullName>
                </value>
                <value>
                    <fullName>5% Down</fullName>
                </value>
                <value>
                    <fullName>Jumbo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Office__c</fullName>
        <description>For Real Estate use the branch office.  For other industries the location</description>
        <label>Local Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketo_Sync__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--To Be Determined--</fullName>
                    <default>true</default>
                    <label>--To Be Determined--</label>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Cable Network Bureau</fullName>
                </value>
                <value>
                    <fullName>Community Newspaper</fullName>
                </value>
                <value>
                    <fullName>Daily Newspaper</fullName>
                </value>
                <value>
                    <fullName>Daily Newspaper Bureau</fullName>
                </value>
                <value>
                    <fullName>Daily Newspaper Special Section</fullName>
                </value>
                <value>
                    <fullName>Freelancer</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Magazine Bureau</fullName>
                </value>
                <value>
                    <fullName>News Service/Syndicate</fullName>
                </value>
                <value>
                    <fullName>News Service/Syndicate Bureau</fullName>
                </value>
                <value>
                    <fullName>News Web Site</fullName>
                </value>
                <value>
                    <fullName>Online Version</fullName>
                </value>
                <value>
                    <fullName>Radio Show</fullName>
                </value>
                <value>
                    <fullName>Radio Station</fullName>
                </value>
                <value>
                    <fullName>Social Networking Site</fullName>
                </value>
                <value>
                    <fullName>Television Show</fullName>
                </value>
                <value>
                    <fullName>Television Station</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mitigants__c</fullName>
        <label>Mitigants</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lead_Generator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Lead Generator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Salespeople__c</fullName>
        <inlineHelpText>Number of sales personnel at account (Loan Officers, Agents, etc)</inlineHelpText>
        <label>Number of Salespeople</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offers_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_SysAdmin_Can_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked only System Administrator can edit this account</description>
        <inlineHelpText>If checked only System Administrator can edit this account</inlineHelpText>
        <label>Only SysAdmin Can Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Business_Lines__c</fullName>
        <label>Other Business Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Warehouse Capacity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>IF( !ISBLANK( Parent.Name ) , Parent.Name , Name )</formula>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Conforming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conforming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Jumbo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_X5_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5% Down</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>